Python arithmetic section IDs

--- a/programming/python/arithmetic.html
+++ b/programming/python/arithmetic.html
@@ -6,37 +6,37 @@ permalink: /programming/python/arithmetic/
 
 <h1>Python Arithmetic</h1>
 
-<section>
+<section id="addition">
     <h2>Addition</h2>
     <p>Adding in Python is very simple. To add numbers, we just put a plus (<code>+</code>) in between them.</p>
 </section>
 
-<section>
+<section id="subtraction">
     <h2>Subtraction</h2>
     <p>Subtraction is the same as addition, but now using a dash (<code>-</code>).</p>
 </section>
 
-<section>
+<section id="multiplication">
     <h2>Multiplication</h2>
     <p>Multiplication is also the same as addition, but using an asterisk (<code>*</code>).</p>
 </section>
 
-<section>
+<section id="division">
     <h2>Division</h2>
     <p>Adding in Python is very simple. To add numbers, we just put a slash (<code>/</code>) in between them.</p>
 </section>
 
-<section>
+<section id="getting-the-remainder">
     <h2>Getting the Remainder</h2>
     <p>Let's say that we want to know the remainder of <var>a</var> ÷ <var>b</var>. In Python, we stick a percent symbol between <var>a</var> and <var>b</var>. So, <code>a % b</code>. In programming, this operation is called <em>modulus</em>.</p>
 </section>
 
-<section>
+<section id="floor-division">
     <h2>Floor Division</h2>
     <p>Here, "floor" means "rouding down". This is basically like not doing the decimals in long division. Instead of using <code>/</code>, here we use <code>//</code>.</p>
 </section>
 
-<section>
+<section id="exponents">
     <h2>Exponents</h2>
     <p>Exponents are easy. If we wanted to do <var>a</var><sup><var>b</var></sup>, we would write it as <code>a ** b</code> in Python.</p>
 </section>
