Python casting and comments section IDs

--- a/programming/python/casting.html
+++ b/programming/python/casting.html
@@ -6,7 +6,7 @@ permalink: /programming/python/casting/
 
 <h1>Python Casting</h1>
 
-<section>
+<section id="what-is-casting">
     <h2>What is Casting?</h2>
     <p>Let's imagine that we were building a command line application and we wanted the user to enter a number and we wanted to do some arithmetic with it. We can't do arithmetic with strings, so we have to convert our string into an integer. We would use casting to accomplish that.</p>
 </section>
