--- a/programming/python/comments.html
+++ b/programming/python/comments.html
@@ -6,20 +6,20 @@ permalink: /programming/python/comments/
 
 <h1>Python Comments</h1>
 
-<section>
+<section id="what-are-comments">
     <h2>What are Comments?</h2>
     <p>When we're coding, sometimes we want to just put type something without Python running it. Or maybe we have some code that doesn't work, but we still want to save it for reference. To do this, we use comments.</p>
 </section>
 
-<section>
+<section id="single-line-comments">
     <h2>Single-Line Comments</h2>
     <p>To do single-line comments in Python, we simply put a number sign (<code>#</code>) in front of it. For example, run:</p>
     <pre><code class="language-python">#print("Hello World")</code></pre>
     <p>Nothing is outputted.</p>
 </section>
 
-<section>
-    <h2>Multiline Comments</h2>
+<section id="multi-line-comments">
+    <h2>Multi-Line Comments</h2>
     <p>To make a multiline comment (one spanning multiple lines), wrap the entire thing you want to comment out in three quotes (<code>"""</code> or <code>'''</code>). For example, run:</p>
     <pre><code class="language-python">'''print("Hello")
 print("World")'''</code></pre>
