Python environment setup edit

--- a/programming/python/environment-setup.html
+++ b/programming/python/environment-setup.html
@@ -7,7 +7,7 @@ permalink: /programming/python/environment-setup/
 <h1>Python Environment Setup</h1>
 <p>Now, it's time to set up our environment.</p>
 
-<section>
+<section id="installing-python">
     <h2>Installing Python</h2>
     <p>To use Python, you must first install Python. To install Python, go to <a href="https://python.org">python.org/downloads</a>.</p>
     <img src="/images/programming/python/python-org-downloads-screenshot.png" alt="Python.org/downloads screenshot">
@@ -23,10 +23,10 @@ permalink: /programming/python/environment-setup/
     <p>Now, simply close it and now you are ready to use Python!</p>
 </section>
 
-<section>
+<section id="installing-sublime-text">
     <h2>Installing Sublime Text</h2>
-    <p>After getting Python, you will also need a code editor. <a target="_blank" href="https://www.sublimetext.com">Sublime Text</a> is a great and easy-to-use text editor that we will be installing in this tutorial.</a></p>
-    <p>After navigating to the <a href="https://www.sublimetext.com/download" target="_blank">Download</a> page, you will want to download the file for your computer. Once the file is downloaded, simply run it and go through all of the prompts. At the end, if it closes successfully, you should have Sublime Text installed correctly!</a></p>
+    <p>After getting Python, you will also need a code editor. <a href="https://www.sublimetext.com">Sublime Text</a> is a great and easy-to-use text editor that we will be installing in this tutorial.</a></p>
+    <p>After navigating to the <a href="https://www.sublimetext.com/download">Download</a> page, you will want to download the file for your computer. Once the file is downloaded, simply run it and go through all of the prompts. At the end, if it closes successfully, you should have Sublime Text installed correctly!</a></p>
     <p>To open Sublime Text, just find it as you would any other app.</p>
     <h3>Congratulations! It's time to start coding!</h3>
 </section>
