--- a/programming/python/for-loops.html
+++ b/programming/python/for-loops.html
@@ -6,7 +6,7 @@ permalink: /programming/python/for-loops/
 
 <h1>Python For Loops</h1>
 
-<section>
+<section id="what-is-a-for-loop">
     <h2>What is a For Loop?</h2>
     <p>A for loop is used to <em>iterate</em> through an <em>iterable</em>. An iterable is something you can go one by one through, which can be a list, a tuple, a string, or a set. To iterate through an iterable means to go one by one through it. Then, inside of our for loop, we can do something whenever we iterate through one element in the iterable.</p>
     <p>Below is the general form of a for loop: </p>
@@ -16,7 +16,7 @@ for [element] in [iterable]:
     </code></pre>
 </section>
 
-<section>
+<section id="range-function">
     <h2>The <code>range</code> function</h2>
     <p>The <code>range</code> function is a built-in Python function which returns integers from a start number to an end number, where the start and end numbers are included. Below is the syntax: </p>
     <pre><code class="language-python">range(<i>start</i>, <i>end</i>)</code></pre>
