Python If-Else section IDs

--- a/programming/python/if-else.html
+++ b/programming/python/if-else.html
@@ -6,27 +6,27 @@ permalink: /programming/python/if-else/
 
 <h1>Python If/Else</h1>
 
-<section>
+<section id="what-are-if-and-else-statements">
     <h2>What are <code>if</code> and <code>else</code> Statements?</h2>
     <p>When we are coding, we often want some code to be run only when condition is met. This can be implemented using if and else statements, which sound like exactly what they mean. We'll go into more detail later.</p>
 </section>
 
-<section>
+<section id="if-statement">
     <h2>The <code>if</code> statement</h2>
     <p></p>
 </section>
 
-<section>
+<section id="else-statement">
     <h2>The <code>else</code> statement</h2>
     <p></p>
 </section>
 
-<section>
+<section id="elif-statement">
     <h2>The <code>elif</code> statement</h2>
     <p></p>
 </section>
 
-<section>
+<section id="pass-statement">
     <h2>The <code>pass</code> statement</h2>
     <p>In Python, if statements can't be empty so we use the <code>pass</code> statement to tell Python to do nothing so that Python won't raise an error: </p>
     <pre><code class="language-python">
