Python intro section IDs

--- a/programming/python/index.html
+++ b/programming/python/index.html
@@ -3,7 +3,7 @@ layout: python
 title: Introduction to Python
 ---
 
-<section>
+<section id="what-is-python">
     <h1>What Is Python?</h1>
     <p>Python is a simple but powerful programming language. Python is one of the most popular programming languages and can be used to create everything from websites to artificial intelligence.</p>
     <figure>
@@ -12,19 +12,18 @@ title: Introduction to Python
     </figure>
 </section>
 
-<section>
+<section id="history">
     <h1>History</h1>
     <p>Guido van Rossum, the creator of Python, first started working on Python in the 1980s. Python was first released in 1991. Currently, Python is in version 3.</p>
 </section>
 
-
-<section>
+<section id="why-python">
     <h1>Why Python?</h1>
     <p>Python is simple and easy to pick up but it is also very powerful, being able to make everything from websites, games, and even to artificial intelligence. Plus, Python is used widely in real-life and learning Python is great for your resume.</p>
     <p>Many other people also use Python and have made things called modules, which are basically reusable bits of code. Since Python has such as large community, there are modules for everything from computer vision to desktop applications. Moreover, Python also has a lot of built-in modules.</p>
 </section>
 
-<section>
+<section id="uses">
     <h1>Uses</h1>
     <p>Python is a general-purpose programming language, so it can be used to <strong>TONS</strong> of different things. Some uses of Python include:</p>
     <ul>
@@ -38,7 +37,7 @@ title: Introduction to Python
     </ul>
 </section>
 
-<section>
+<section id="prerequisites">
     <h1>Prerequisites</h1>
     <p>Below is a list of prerequisites for this Python course: </p>
     <ul>
