forgot two replace :|

--- a/programming/python/data-structures-and-algorithms/queues.html
+++ b/programming/python/data-structures-and-algorithms/queues.html
@@ -24,7 +24,7 @@ permalink: /programming/python/data-structures-and-algorithms/queues/
 </section>
 
 <section>
-    <h2>Stack Implementation</h2>
+    <h2>Queue Implementation</h2>
     <p>In Python, we actually have a built-in module called <code>queue</code> that comes with a <code>Queue</code> class. We can use this class to represent a Queue. As an example, type the following code into your file:</p>
     <pre><code class="language-python">
 from queue import Queue
