more section IDs

--- a/programming/python/more-on-printing.html
+++ b/programming/python/more-on-printing.html
@@ -7,7 +7,7 @@ permalink: /programming/python/more-on-printing/
 <h1>More on Printing</h1>
 <p>In the last tutorial, we learned that we could print stuff into the terminal by using the word <code>print</code>. In this tutorial, we'll learn a bit more about printing.</p>
 
-<section>
+<section id="printing-multiple-things-at-a-time">
     <h2>Printing Multiple Things at a Time</h2>
     <p>We can give <code>print</code> two things to print by separating them by commas.</p>
     <p>For example:</p>
@@ -20,7 +20,7 @@ permalink: /programming/python/more-on-printing/
     <pre><code class="language-python">HelloWorld</code></pre>
 </section>
 
-<section>
+<section id="printing-without-endline">
     <h2>Printing Without Endline</h2>
     <p>Python's <code>print</code> actually creates a new line after it prints. With the Hello World it might not be that obvious, but we can easily demonstrate it by using <code>print</code> twice.</p>
     <p>For example:</p>
