--- a/programming/python/requests.html
+++ b/programming/python/requests.html
@@ -6,12 +6,12 @@ permalink: /programming/python/requests/
 
 <h1>Python Requests</h1>
 
-<section>
+<section id="what-are-requests">
     <h2>What are Requests?</h2>
     <p>In this case, requests refers to HTTP requests. This means requesting stuff from a server over the internet. There are many different types of requests. <code>GET</code> means getting something from the server. You do this whenever you are visiting a website. Then, there's <code>POST</code>, which is for updating something on the server. <code>PUT</code>, <code>DELETE</code>, and <code>PATCH</code> are other HTTP request types. However, <code>GET</code> and <code>POST</code> are the two most common ones.</p>
 </section>
 
-<section>
+<section id="requests-module">
     <h2>The <code>requests</code> Module</h2>
     <p>Python has built-in modules for doing HTTP requests, but the <code>requests</code> module makes it much simpler. Because <code>requests</code> is not in the Python standard library, we need to install it using PIP: </p>
     <code class="language-bat">pip install requests</code>
@@ -21,7 +21,7 @@ permalink: /programming/python/requests/
     <p>If it works, you can now start using the <code>requests</code> module!</p>
 </section>
 
-<section>
+<section id="making-get-requests">
     <h2>Making GET Requests</h2>
     <p>GET requests simply request data from a server. The data could be HTML (for websites), JSON (APIs), or even XML. In fact, your browser sends a GET request every time you visit a website. To send a GET request, we type the following: </p>
     <pre><code class="language-python">requests.get("<i>URL</i>")</code></pre>
