Python lists and sets section IDs

--- a/programming/python/lists.html
+++ b/programming/python/lists.html
@@ -6,18 +6,18 @@ permalink: /programming/python/lists/
 
 <h1>Python Lists</h1>
 
-<section>
+<section id="what-are-lists">
     <h2>What are Lists?</h2>
     <p>Lists are ordered collections of elements. The elements can have any data type and you can mix data types. You can set, create, and remove elements.</p>
 </section>
 
-<section>
-    <h2>How to Make Lists?</h2>
+<section id="making-lists">
+    <h2>Making Lists</h2>
     <p>To make lists, we seperate our elements with commas and wrap the entire thing in square brackets (<code>[</code> and <code>]</code>), which tells Python that we're making a list. We can put whatever we want in there. For example: </p>
     <pre><code class="language-python">my_list = ["Learnmonkey", 25, 8.452, False]</code></pre>
 </section>
 
-<section>
+<section id="accessing-list-elements">
     <h2>Accessing List Elements</h2>
     <p>To access a list element, we type: </p>
     <pre><code class="language-python"><i>list</i>[<i>index</i>]</code></pre>
@@ -36,7 +36,7 @@ Learnmonkey
 False</samp></pre>
 </section>
 
-<section>
+<section id="setting-list-elements">
     <h2>Setting List Elements</h2>
     <p>To set a list element, we type: </p>
     <pre><code class="language-python"><i>list</i>[<i>index</i>] = <i>value</i></code></pre>
