--- a/programming/python/sets.html
+++ b/programming/python/sets.html
@@ -5,12 +5,12 @@ permalink: /programming/python/sets/
 ---
 <h1>Python Sets</h1>
 
-<section>
+<section id="what-is-a-set">
     <h2>What is a Set?</h2>
     <p>A set is an unordered collection of things. Just like with lists and tuples, elements can be anything, but there is no order. Once you create an element, you can't change it, but you can still create and remove elements.</p>
 </section>
 
-<section>
+<section id="making-a-set">
     <h2>Making a Set</h2>
     <p>To make a set, we use curly braces (<code>{</code> and <code>}</code>) and put the elements inside, seperated by brackets: </p>
     <pre><code class="language-python">my_set = {"Alabama", 5, False, 2.3, 1003, "Toronto"}</code></pre>
