more section IDs

--- a/programming/python/tuples.html
+++ b/programming/python/tuples.html
@@ -6,18 +6,18 @@ permalink: /programming/python/tuples/
 
 <h1>Python Tuples</h1>
 
-<section>
+<section id="what-are-tuples">
     <h2>What are Tuples?</h2>
     <p>Tuples are ordered collections of things, just like lists. You can also put any data type you want in a tuple and you can also mix data types. However, you can't change the tuple once you create it. In other words, tuples are <em>immutable</em>.</p>
 </section>
 
-<section>
+<section id="making-tuples">
     <h2>Making Tuples</h2>
     <p>It's the same as lists, but we use parentheses (<code>(</code> and <code>)</code>) instead of square brackets. We seperate the items in the tuple by commas. For example: </p>
     <pre><code class="language-python">my_tuple = ("Learnmonkey", 43, True, 314.41)</code></pre>
 </section>
 
-<section>
+<section id="getting-an-element">
     <h2>Getting an Element</h2>
     <p>To access a tuple element, we type: </p>
     <pre><code class="language-python"><i>tuple</i>[<i>index</i>]</code></pre>
@@ -36,7 +36,7 @@ True
 314.41</samp></pre>
 </section>
 
-<section>
+<section id="immutability">
     <h2>Immutability</h2>
     <p>As said earlier, tuples are immutable (i.e. you can't change them once you make them). As an example, if we try and do something like: </p>
     <pre><code class="language-python">
