--- a/programming/python/variables.html
+++ b/programming/python/variables.html
@@ -6,20 +6,20 @@ permalink: /programming/python/variables/
 
 <h1>Python Variables</h1>
 
-<section>
+<section id="what-are-variables">
     <h2>What are Variables?</h2>
     <p>Well, let's break down the word "variable". It sounds like the words "vary" and "able" chained together, right? So, the word variable means some thing that can be changed, or varied.</p>
     <p>You can think of a variable as a box and the name of the variable as box's label. You can't change the label, but you can change what's inside the box.</p>
 </section>
 
-<section>
+<section id="why-use-variables">
     <h2>Why use Variables?</h2>
     <p>You might think that variables are super useless, but they are one of the most important things in all of programming. Why?</p>
     <p>Well, imagine you were programming a 2d game. When making games, you need to know the position of the player. But you can't know the position. The player decides that. So, you put the position in a variable.</p>
 </section>
 
-<section>
-    <h2>How to Use Variables?</h2>
+<section id="using-variables">
+    <h2>Using Variables</h2>
     <p>Let's say that we want to declare a variable called <code>x</code> and set it to the value of 3. We type:</p>
     <pre><code class="language-python">x = 3</code></pre>
     <p>If we now want a variable called <code>count</code> and set it to 10, we type:</p>
@@ -28,7 +28,7 @@ permalink: /programming/python/variables/
     <pre><code class="language-python">x = 5</code></pre>
 </section>
 
-<section>
+<section id="a-word-of-caution">
     <h2>A word a caution</h2>
     <p>In math class, our teacher told us that x = y is the same as y = x. That's not true in programming. For example if we type, it's perfectly fine:</p>
     <pre><code class="language-python">x = 3</code></pre>
