more section IDs

--- a/programming/python/your-first-python-program.html
+++ b/programming/python/your-first-python-program.html
@@ -7,7 +7,7 @@ permalink: /programming/python/your-first-python-program/
 <h1>Your First Python Program</h1>
 <p>Now, it's time for you to write your first program.</p>
 
-<section>
+<section id="writing-the-program">
     <h2>Writing the Program</h2>
     <p>To write our very first program, we will be using our freshly installed Sublime Text. First, open up Sublime Text, and you should the following screen: </p>
     <img src="/images/programming/python/sublime-text-1.png" alt="Empty Sublime Text window">
@@ -15,7 +15,7 @@ permalink: /programming/python/your-first-python-program/
     <pre><code class="language-python">print("Hello World!")</code></pre>
 </section>
 
-<section>
+<section id="running-the-program">
     <h2>Running the Program</h2>
     <p>Now, we need to save our Python program. To do this, press the Ctrl and S keys. You should see a window like the following pop up: </p>
     <img src="/images/programming/python/sublime-text-2.png" alt="Sublime Text Save Window">
@@ -24,7 +24,7 @@ permalink: /programming/python/your-first-python-program/
     <img src="/images/programming/python/sublime-text-3.png" alt="Sublime Text Runned Python Program">
 </section>
 
-<section>
+<section id="code-breakdown">
     <h2>Code Breakdown</h2>
     <p>Time for a breakdown of what we just did. Below is the code:</p>
     <pre><code class="language-python">print("Hello World!")</code></pre>
