--- a/programming/python/while-loops.html
+++ b/programming/python/while-loops.html
@@ -6,7 +6,7 @@ permalink: /programming/python/while-loops/
 
 <h1>Python While Loops</h1>
 
-<section>
+<section id="what-is-a-while-loop">
     <h2>What is a While Loop?</h2>
     <p>A while loop is like an if statement, but it runs the code inside the loop as long as the condition is true. Below is the format of a while loop: </p>
     <pre><code class="language-python">
