--- a/programming/python/data-structures-and-algorithms/queues.html
+++ b/programming/python/data-structures-and-algorithms/queues.html
@@ -43,8 +43,8 @@ q.put(True)
 print(q.queue)
 print(type(q.queue))
     </code></pre>
-    <p>After running the code, you'll get<br> <samp>5<br>
-[1, 2, 3, 4]</samp><br> printed out into the terinal.</p>
+    <p>After running the code, you'll get<br> <samp>deque([5, 'hi', 'more stuff', True])<br>
+&#60;class 'collections.deque'></samp><br> printed out into the terinal.</p>
     <p>On the first two lines, we call the <code>append</code> method on our <code>history</code> list. This will add the element we pass in to the end of our list. After running these two lines of code, our <code>history</code> list will be <code>[1, 2, 3, 4, 5]</code>. First, it will add <code>4</code> to the list and then it will add <code>5</code>.</p>
     <p>Then, we have <pre><code class="language-python">
 print(history.pop())
