add + new section

--- a/programming/python/data-structures-and-algorithms/queues.html
+++ b/programming/python/data-structures-and-algorithms/queues.html
@@ -45,11 +45,12 @@ print(type(q.queue))
     </code></pre>
     <p>After running the code, you'll get<br> <samp>deque([5, 'hi', 'more stuff', True])<br>
 &#60;class 'collections.deque'></samp><br> printed out into the terinal.</p>
-    <p>On the first two lines, we call the <code>append</code> method on our <code>history</code> list. This will add the element we pass in to the end of our list. After running these two lines of code, our <code>history</code> list will be <code>[1, 2, 3, 4, 5]</code>. First, it will add <code>4</code> to the list and then it will add <code>5</code>.</p>
-    <p>Then, we have <pre><code class="language-python">
-print(history.pop())
-print(history)
-    </code></pre> On the first line of this snippet, we use the <code>pop</code> method on our <code>history</code> list. The <code>pop</code> method will remove the last item from the list and return it. So, our program will print out the <code>5</code> from the end of the list. To make sure that our code has successfully run, we print out <code>history</code> and it displays <code>[1, 2, 3, 4]</code>, so we know that <code>pop</code> did indeed delete the last element (<code>5</code>) from our list.</p>
+    <p>Notice how the type of <code>q.queue</code> is of <code>collections.deque</code>. This is a seperate class that implements a <a href="/programming/python/data-structures-and-algorithms/deques/">Deque</a>, which we'll learn about in the next tutorial.</p>
+</section>
+
+<section id="putting">
+    <h2>Putting</h2>
+    <p>With Queues, </p>
 </section>
 
 <section id="queues-in-competitions">
