--- a/programming/python/data-structures-and-algorithms/queues.html
+++ b/programming/python/data-structures-and-algorithms/queues.html
@@ -53,6 +53,11 @@ print(type(q.queue))
     <p>With Queues, </p>
 </section>
 
+<section id="removing-items">
+    <h2>Removing Items</h2>
+    <p></p>
+</section>
+
 <section id="queues-in-competitions">
     <h2>Queues in Competition</h2>
     <p>We've already gone over how Queues work and how to implement one. So, now, let's go over using Queues in Programming Competitions and Job Interview problems.</p>
