--- a/programming/python/functions.html
+++ b/programming/python/functions.html
@@ -16,16 +16,17 @@ permalink: /programming/python/functions/
     <p>To make a function, we use <code>def</code>, which stands for "define". After that, we type our function name, which in this case is <code>helloWorld</code> and type a pair of parentheses (<code>()</code>). After that, we type a colon and press enter. Then, Sublime Text should indent the next line. This is because Python uses indentation for seperating blocks of code and this includes functions.</p>
     <small>Note: You cannot put a space in the middle of a function name.</small><br>
     <img src="/images/programming/python/functions-1.png" alt="Making a Python function in Sublime Text" style="height:20%;width:20%;">
-    <p>Then, inside of our function we can type <pre style='color:#000000;background:#ffffff;'><span style='color:#800000; font-weight:bold; '>print</span><span style='color:#808030; '>(</span><span style='color:#0000e6; '>"Hello World!"</span><span style='color:#808030; '>)</span>
+    <p>Then, inside of our function we can type <pre><code class="language-python">print("Hello World!")</code></pre></span>
     </pre>. This tells Python that whenever we run the <code>helloWorld</code> function, we want to print <samp>Hello World!</samp>. </p>
 </section>
 
 <section id="function-arguments-and-parameters">
     <h2>Function Arguments and Parameters</h2>
     <p>When we are making our function, we can make our function have specific inputs so that when we use our function. These are called arguments. Then, when we run our functions, we can pass in the arguments we just defined as parameters. We can do it as follows:</p>
-    <pre style='color:#000000;background:#ffffff;'><span style='color:#800000; font-weight:bold; '>def</span> helloWorld<span style='color:#808030; '>(</span>argument1<span style='color:#808030; '>,</span> argument2<span style='color:#808030; '>,</span> argument3<span style='color:#808030; '>,</span> <span style='color:#808030; '>.</span><span style='color:#808030; '>.</span><span style='color:#808030; '>.</span><span style='color:#808030; '>.</span><span style='color:#808030; '>.</span><span style='color:#808030; '>)</span><span style='color:#808030; '>:</span>
-        <span style='color:#696969; '># do something</span>
-    </pre>
+    <pre><code class="language-python">
+def helloWorld(argument1, argument2, argument3, .....):
+    # do something
+    </code></pre>
     <p>Running a function quite similar to making a function, but we don't use <code>def</code> and we don't type anything after the parentheses. For example, we could call the <code>helloWorld</code> fucntion we made earlier by typing <code>helloWorld()</code>. When we run it, we get <samp>Hello World!</samp>.</p>
     <small>Note: The number of arguments made when you are making the must be the same as the number of parameters you pass in while running it.</small>
     <small>Note: You must run your function after you have made it. This is because Python runs the code line by line.</small>
@@ -34,21 +35,23 @@ permalink: /programming/python/functions/
 <section id="returning">
     <h2>Returning</h2>
     <p>When we are programming, we often want our functions to return something. We can do this in Python by using the <code>return</code> keyword. In our function code, we simply type <code>return [value]</code>, which will return the value. As an example, let's modify our <code>helloWorld</code> function to return "Hello World!" instead of printing it. To do this, we type the following: </p>
-    <pre style='color:#000000;background:#ffffff;'><span style='color:#800000; font-weight:bold; '>def</span> helloWorld<span style='color:#808030; '>(</span><span style='color:#808030; '>)</span><span style='color:#808030; '>:</span>
-	<span style='color:#800000; font-weight:bold; '>return</span> <span style='color:#0000e6; '>"Hello World!"</span>
-    </pre>
+    <pre><code class="language-python">
+def helloWorld():
+    return "Hello World!"
+    </code></pre>
     <p>Then, we can print the result of the function: </p>
-    <pre style='color:#000000;background:#ffffff;'><span style='color:#800000; font-weight:bold; '>print</span><span style='color:#808030; '>(</span>helloWorld<span style='color:#808030; '>(</span><span style='color:#808030; '>)</span><span style='color:#808030; '>)</span></pre>
+    <pre><code class="language-python">print(helloWorld())</code></pre>
     <p>As expected, we get back <samp>Hello World!</samp>.</p>
 </section>
 
 <section id="default-parameters">
     <h2>Default Parameters</h2>
     <p>We can set default parameters as following:</p>
-    <pre style='color:#000000;background:#ffffff;'><span style='color:#800000; font-weight:bold; '>def</span> greet<span style='color:#808030; '>(</span>name<span style='color:#808030; '>=</span><span style='color:#0000e6; '>"Learnmonkey"</span><span style='color:#808030; '>)</span><span style='color:#808030; '>:</span>
-        <span style='color:#800000; font-weight:bold; '>print</span><span style='color:#808030; '>(</span><span style='color:#0000e6; '>"Hello "</span> <span style='color:#44aadd; '>+</span> name<span style='color:#808030; '>)</span>
-greet<span style='color:#808030; '>(</span><span style='color:#808030; '>)</span>
-    </pre>
+    <pre><code class="language-python">
+def greet(name="Learnmonkey"):
+    print("Hello " + name)
+greet()
+    </code></pre>
     <p>The output of the code is <samp>Hello Learnmonkey</samp>.</p>
 </section>
 
@@ -56,25 +59,27 @@ greet<span style='color:#808030; '>(</span><span style='color:#808030; '>)</span
     <h2>Arbitrary Arguments (<code>*args</code>)</h2>
     <p>In Python, we can have as many arguments as we want by putting <code>*args</code> as one of the arguments, where <code>args</code> is a tuple with all of the arguments. Below is an example: </p>
     <small>Note: We reference the <code>*args</code> by typing <code>args</code> not <code>*args</code>.</small>
-    <pre style="color:#000000;background:#ffffff;"><span style="color:#800000; font-weight:bold; ">def</span> argsTest<span style="color:#808030; ">(</span><span style="color:#44aadd; ">*</span>args<span style="color:#808030; ">)</span><span style="color:#808030; ">:</span>
-        <span style="color:#800000; font-weight:bold; ">print</span><span style="color:#808030; ">(</span>args<span style="color:#808030; ">)</span>
-argsTest<span style="color:#808030; ">(</span><span style="color:#808030; ">)</span>
-    </pre>
+    <pre><code class="language-python">
+def argsTest(*args):
+    print(args)
+argsTest()
+    </code></pre>
     <p>The output of the code is <samp>(1, 2.1, 3)</samp>.</p>
     <small>Note: We could rename <code>*args</code> to <code>*nums</code> or anything else. The only thing that matters in the asterisk in front. It is customary to use <code>*args</code>.</small>
 </section>
 
-<section id="keyword-arguments">
-    <h2>Keyword Arguments</h2>
-    <p>In Python, we can use keyword arguments to make our code more readable. When we are using keyword arguments, instead of putting out parameters in order, we can put our parameters in whatever order we choose. Below is an example of keyword arguments: </p>
+<section id="named-arguments">
+    <h2>Named Arguments</h2>
+    <p>In Python, we can use named arguments to make our code more readable. When we are using named arguments, instead of putting out parameters in order, we can put our parameters in whatever order we choose. Below is an example of named arguments: </p>
 
-    <pre style="color:#000000;background:#ffffff;"><span style="color:#800000; font-weight:bold; ">def</span> favoriteFoods<span style="color:#808030; ">(</span>food1<span style="color:#808030; ">,</span> food2<span style="color:#808030; ">,</span> food3<span style="color:#808030; ">)</span><span style="color:#808030; ">:</span>
-        <span style="color:#800000; font-weight:bold; ">print</span><span style="color:#808030; ">(</span><span style="color:#0000e6; ">"My favorite foods are: "</span><span style="color:#808030; ">)</span>
-        <span style="color:#800000; font-weight:bold; ">print</span><span style="color:#808030; ">(</span>food1<span style="color:#808030; ">)</span>
-        <span style="color:#800000; font-weight:bold; ">print</span><span style="color:#808030; ">(</span>food2<span style="color:#808030; ">)</span>
-        <span style="color:#800000; font-weight:bold; ">print</span><span style="color:#808030; ">(</span>food3<span style="color:#808030; ">)</span>
-favoriteFoods<span style="color:#808030; ">(</span>food2<span style="color:#808030; ">=</span><span style="color:#0000e6; ">"noodles"</span><span style="color:#808030; ">,</span> food1<span style="color:#808030; ">=</span><span style="color:#0000e6; ">"bananas"</span><span style="color:#808030; ">,</span> food3<span style="color:#808030; ">=</span><span style="color:#0000e6; ">"pizza"</span><span style="color:#808030; ">)</span>
-    </pre>
+    <pre><code class="language-python">
+def favoriteFoods(food1, food2, food3):
+    print("My favorite foods are: ")
+    print(food1)
+    print(food2)
+    print(food3)
+favoriteFoods(food2="noodles", food1="bananas", food3="pizza")
+    </code></pre>
 
     <p>The output is: </p>
     <pre><samp>
@@ -87,23 +92,26 @@ pizza</samp></pre>
 <section id="arbitrary-keyword-arguments">
     <h2>Arbitrary Keyword Arguments (<code>**kwargs</code>)</h2>
     <p>In Python, we have another similar thing to <code>*args</code> which is <code>**kwargs</code>. It's similar in the sense that they start with asterisks, only that <code>**kwargs</code> has two asterisks but with <code>**kwargs</code>, but <code>**kwargs</code> takes arguments as seperate parameters. For example, if I have the code</p>
-        <pre style='color:#000000;background:#ffffff;'><span style='color:#800000; font-weight:bold; '>def</span> my_function<span style='color:#808030; '>(</span><span style='color:#44aadd; '>**</span>stuff<span style='color:#808030; '>)</span><span style='color:#808030; '>:</span>
-            <span style='color:#800000; font-weight:bold; '>print</span><span style='color:#808030; '>(</span>stuff<span style='color:#808030; '>)</span>
-my_function<span style='color:#808030; '>(</span>random<span style='color:#808030; '>=</span><span style='color:#008c00; '>2765</span><span style='color:#808030; '>,</span> thing<span style='color:#808030; '>=</span><span style='color:#0000e6; '>"gega"</span><span style='color:#808030; '>,</span> my_name<span style='color:#808030; '>=</span><span style='color:#0000e6; '>"monkey"</span><span style='color:#808030; '>)</span>
-        </pre>
+        <pre><code class="language-python">
+def my_function(**stuff):
+    print(stuff)
+my_function(random=2765, thing="gega", my_name="monkey")
+        </code></pre>
     <small>Fun fact: the <code>kw</code> in <code>kwargs</code> stands for <b>k</b>ey<b>w</b>ord arguments.</small>
     <p>After running that code, we get a dictionary, where the keys are the names of the keyword arguments and the values are the values:</p>
-    <pre style='color:#000000;background:#ffffff;'><span style='color:#800080; '>{</span><span style='color:#0000e6; '>'random'</span><span style='color:#808030; '>:</span> <span style='color:#008c00; '>2765</span><span style='color:#808030; '>,</span> <span style='color:#0000e6; '>'thing'</span><span style='color:#808030; '>:</span> <span style='color:#0000e6; '>'gega'</span><span style='color:#808030; '>,</span> <span style='color:#0000e6; '>'my_name'</span><span style='color:#808030; '>:</span> <span style='color:#0000e6; '>'monkey'</span><span style='color:#800080; '>}</span>
-    </pre>
+    <pre><code class="language-python">
+{'random': 2765, 'thing': 'gega', 'my_name': 'monkey'}
+    </code></pre>
 </section>
 
 <section id="pass-statement">
     <h2>The <code>pass</code> statement</h2>
     <p>Sometimes you just want an empty function. However, Python won't let you do that and putting in a comment won't work either. So, we use <code>pass</code>. Simply put <code>pass</code> as the code in your function and Python will do nothing: </p>
-    <pre style='color:#000000;background:#ffffff;'><span style='color:#800000; font-weight:bold; '>def</span> emptyFunction<span style='color:#808030; '>(</span><span style='color:#808030; '>)</span><span style='color:#808030; '>:</span>
-        <span style='color:#800000; font-weight:bold; '>pass</span>
-emptyFunction<span style='color:#808030; '>(</span><span style='color:#808030; '>)</span>
-    </pre>
+    <pre><code class="language-python">
+def emptyFunction():
+    pass
+emptyFunction()
+    </code></pre>
 </section>
 
 <section id="running-a-function">
