--- a/physics/astronomy/constellations.html
+++ b/physics/astronomy/constellations.html
@@ -5,12 +5,12 @@ layout: astronomy
 ---
 <h1>Constellations</h1>
 
-<section>
+<section id="what-is-a-constellation">
     <h2>What is a Constellation?</h2>
     <p>A constellation is a pattern of stars. At many different points in time, different people have identified different constellations. These constellations are often related to mythology.</p>
 </section>
 
-<section>
+<section id="asterisms">
     <h2>Asterisms</h2>
     <p>Astronomers currently recognize 88 constellations as official constellations. Some of these constellations are well-known, like Aquarius, Sagittarius, and Gemini, while others such as Apus, Grus, and Volans are more obscure.</p>
     <p>All other patterns of stars are officially called asterisms. The difference between asterisms and constellations are that constellations have official boundaries in the sky, while asterisms don't. An example of an asterism is the Big Dipper, which is part of the constellation Ursa Major.</p>
