--- a/physics/astronomy/stars.html
+++ b/physics/astronomy/stars.html
@@ -5,25 +5,25 @@ layout: astronomy
 ---
 <h1>Stars</h1>
 
-<section>
+<section id="what-are-stars">
     <h2>What are Stars?</h2>
     <p>When you look outside, stars look like tiny dots of light, maybe with some twinkling. However, in reality, stars are titanic spheres that emit enormous amounts of energy in the form of light and heat. Below is an image of the Sun, which is a star: </p>
     <img src="/images/physics/astronomy/sun.png" alt="False color image of the sun">
     <p>Stars are some of the most numerous objects in the universe; there are 200-400 billion stars in the Milky Way alone.</p>
 </section>
 
-<section>
+<section id="how-stars-produce-energy">
     <h2>How Stars Produce Energy</h2>
     <p>Stars produce their energy via a process called <em>nuclear fusion</em>, which happens in the cores of stars. It works by squeezing together hydrogen atoms until they turn into a helium atom This releases a huge amount of energy. As you'd imagine, it takes a very big star and a <strong>LOT</strong> of energy (heat) to make nuclear fusion happen. This reaction is called the <em>proton-proton chain reaction</em>.</p>
     <img src="/images/physics/astronomy/proton-proton-chain.png" alt="A diagram of the proton-proton chain reaction">
 </section>
 
-<section>
+<section id="composition-of-stars">
     <h2>Composition of Stars</h2>
     <p>Stars are about 90% hydrogen and 10% helium. The element helium was actually first discovered in the sun (a star). Tiny traces of heavier elements can also be found.</p>
 </section>
 
-<section>
+<section id="lifecycle-of-star">
     <h2>The Lifecycle of a Star</h2>
     <p>Stars start from giant clouds of gas, called <em>nebulae</em> (the singular form in <em>nebula</em>). Nebulae are mostly made up of hydrogen and helium, with traces of heavier elements. This composition is reflected in the composition of stars.</p>
     <img src="/images/physics/astronomy/hubble-crab-nebula.png" alt="The Crab Nebula captured by the Hubble Space Telescope">
