Solar System section IDs

--- a/physics/astronomy/solar-system/earth.html
+++ b/physics/astronomy/solar-system/earth.html
@@ -5,38 +5,38 @@ layout: astronomy
 ---
 <h1>Earth</h1>
 
-<section>
+<section id="overview">
     <h2>Overview</h2>
     <p></p>
     <img src="/images/physics/astronomy/earth.png">
 </section>
 
-<section>
+<section id="size-and-distance">
     <h2>Size and Distance</h2>
     <p></p>
 </section>
 
-<section>
+<section id="orbit-and-rotation">
     <h2>Orbit and Rotation</h2>
     <p></p>
 </section>
 
-<section>
+<section id="structure">
     <h2>Structure</h2>
     <p></p>
 </section>
 
-<section>
+<section id="surface">
     <h2>Surface</h2>
     <p></p>
 </section>
 
-<section>
+<section id="atmosphere">
     <h2>Atmosphere</h2>
     <p></p>
 </section>
 
-<section>
+<section id="formation">
     <h2>Formation</h2>
     <p></p>
 </section>
