--- a/physics/astronomy/solar-system/index.html
+++ b/physics/astronomy/solar-system/index.html
@@ -5,12 +5,12 @@ layout: astronomy
 ---
 <h1>The Solar System</h1>
 
-<section>
+<section id="sun">
     <h2>The Sun</h2>
     <p>The Sun is the center of the Solar System and holds the entire thing together with its gravity. You can learn more about the sun <a href="/physics/astronomy/solar-system/sun/">here</a>.</p>
 </section>
 
-<section>
+<section id="planets">
     <h2>The Planets</h2>
     <p>To find all the planets, we need to first define a planet. In 2006, the International Astronomical Union (IAU) defined a planet (in the Solar System) to be anything that fits these requirements: </p>
     <ol>
@@ -33,7 +33,7 @@ layout: astronomy
     <p>The planets can be categorized into two categories: the terrestrial planets and the gas giants. The terrestrial planets are Mercury, Venus, Earth and Mars. The terrestrial planets are made up of heavy elements. The gas giants are much larger than the terrestrial planets and are made up of gases. The gas giants are Jupiter, Saturn, Uranus, and Neptune.</p>
 </section>
 
-<section>
+<section id="dwarf-planets">
     <h2>Dwarf Planets</h2>
     <p><em>Dwarf planets</em> are objects that orbit the Sun and are nearly round, but don't clear the surrounding space. Below is a list of dwarf planets (the names are also links: </p>
     <ol>
