more section IDs

--- a/physics/electrical-engineering/circuit-diagrams.html
+++ b/physics/electrical-engineering/circuit-diagrams.html
@@ -5,12 +5,12 @@ layout: electrical-engineering
 ---
 <h1>Circuit Diagrams</h1>
 
-<section>
+<section id="what-is-a-circuit-diagram">
     <h2>What is a Circuit Diagram?</h2>
     <p>A circuit diagram is used by electrical engineers to more easily represent circuits. Instead of using illustrations of the electrical components, circuit diagrams use abstract shapes.</p>
 </section>
 
-<section>
+<section id="electrical-components">
     <h2>Electrical Components in Circuit Diagrams</h2>
     <p>In this section, we will learn how to represent some common electrical components in circuit diagrams.</p>
     <figure>
