--- a/physics/electrical-engineering/conductors-insulators.html
+++ b/physics/electrical-engineering/conductors-insulators.html
@@ -5,22 +5,22 @@ layout: electrical-engineering
 ---
 <h1>Conductors and Insulators</h1>
 
-<section>
+<section id="inside-the-atom">
     <h2>Inside the Atom</h2>
     <p>Atoms are made up of two parts: the electrons and the nucleus. The nucleus is an tiny and incredibly compact object in the center of the atom. The nucleus is made up of <em>protons</em> and <em>neutrons</em>. A proton has the charge of an electron, but positive. A neutron has a charge of zero. The electrons are in the outer region of the atom.</p>
 </section>
 
-<section>
+<section id="what-is-a-conductor">
     <h2>What is a Conductor?</h2>
     <p>A <em>conductor</em> is a material that electricity can pass through. Most metals are conductive. We use conductors to make wires. Some materials are more conductive than others.</p>
 </section>
 
-<section>
+<section id="what-is-an-insulator">
     <h2>What is an Insulator?</h2>
     <p>An <em>insulator</em> is a material that electricity can't pass through. This includes rubber and ceramic. We use insulators to cover the conductor when making wires so that people aren't injured by the electricity. Electricity can be dangerous!</p>
 </section>
 
-<section>
+<section id="what-makes-something-conductive">
     <h2>What Makes Something Conductive?</h2>
     <p>You can think of electrons orbiting around the nucleus in different circles, called orbitals, depending on how much energy they have. There are a finite number of orbitals.The last orbital that electrons are in is called the valence band.</p>
     <p>There is also another band called the conduction band. If an electron reaches this band, the electron can escape the atom and go to other atoms.</p>
