more section IDs

--- a/physics/electrical-engineering/electricity.html
+++ b/physics/electrical-engineering/electricity.html
@@ -5,20 +5,20 @@ layout: electrical-engineering
 ---
 <h1>Electricity</h1>
 
-<section>
+<section id="what-is-electricity">
     <h2>What is Electricity?</h2>
     <p><em>Electricity</em> simply means something with <em>electric charge</em> is flowing. The most common form of electricity is in the form of <em>electrons</em> flowing.</p>
     <p>The word "electricity" is not the same as "electrical energy", but we often use these terms interchangeably. Electricity is the <em>medium</em> in which electrical energy travels.</p>
     <p>Electricity is perhaps the most important concept in all of electrical engineering.</p>
 </section>
 
-<section>
+<section id="what-is-electrical-charge">
     <h2>What is Electrical Charge?</h2>
     <p>Electrical charge is an intrisic property of matter. Charge can be smaller or large and can be negative or positive. Things with negative charge attract things with positive charge, and vice versa. Things with the same charge (positive and positive, negative and negative) repel. The attraction and the repulsion are proportional to the amount of charge.</p>
     <p>We measure charge in the unit of the <em>coulomb</em>. Because electrical engineering usually deals with electrons, electrical engineers often use coulumbs as a way to talk about the amount of electrons.</p>
 </section>
 
-<section>
+<section id="what-is-an-electron">
     <h2>What is an Electron?</h2>
     <p>An <em>electron</em> is a <em>subatomic particle</em>, which means that it is smaller than an atom (which is incredibly, incredibly small). In fact, electrons make up atoms, something we'll learn more about in the next lesson. The charge of an electron is negative. Electrons move at almost the speed of light, which is 299,792,458 meters per second. In fact, the speed of light is the fastest speed possible in the universe.</p>
 </section>
