--- a/physics/electrical-engineering/diodes.html
+++ b/physics/electrical-engineering/diodes.html
@@ -5,17 +5,17 @@ layout: electrical-engineering
 ---
 <h1>Diodes</h1>
 
-<section>
+<sectionv id="what-is-a-diode">
     <h2>What is a Diode?</h2>
     <p><em>Diodes</em> are electrical components that block the flow of electricity in one direction, but allow it in the opposite direction. The direction in which the diode blocks electricity is called the <em>reverse direction</em>, while the opposite direction is called the <em>forward direction</em>.</p>
 </section>
 
-<section>
+<section id="uses">
     <h2>Uses</h2>
     <p>One interesting use of diodes is as a light. LEDs are in fact a specialized type of diode.</p>
 </section>
 
-<section>
-    <h2>How do Diodes Work?</h2>
+<section id="how-diodes-work">
+    <h2>How Diodes Work</h2>
     <p></p>
 </section>
