--- a/physics/electrical-engineering/index.html
+++ b/physics/electrical-engineering/index.html
@@ -5,13 +5,13 @@ layout: electrical-engineering
 ---
 <h1>Introduction to Electrical Engineering</h1>
 
-<section>
+<section id="what-is-electrical-engineering">
     <h2>What is Electrical Engineering?</h2>
     <p>Electrical engineering deals with electricity, electronics, and electromagnetism. As you'd imagine, electrical engineering is incredibly important to all aspects of our lives.</p>
     <img src="/images/physics/electrical-engineering/electrical-engineering.png">
 </section>
 
-<section>
+<section id="why-learn-electrical-engineering">
     <h2>Why Learn Electrical Engineering?</h2>
     <p>Electricity and electronics are fundamental to our lives and it's good to know how they work. Also, electrical engineering is in many curriculums worldwide.</p>
 </section>
